    other/commercial plastics/EVASKY S87/Vogt.yml
    other/commercial plastics/EVASKY S88/Vogt.yml
    other/anti-reflective coatings/SiN/Vogt-1.91.yml
    other/anti-reflective coatings/SiN/Vogt-2.09.yml
    other/anti-reflective coatings/SiN/Vogt-2.13.yml
    glass/misc/soda-lime/Vogt-10ppm.yml
    main/Si/Schinke.yml (added data for n)
  new data (thanks to Arkadiusz Ciesielski, University of Warsaw, Poland, for providing numerical data in YAML format!)
    main/Ag/Ciesielski.yml
    main/Ag/Ciesielski-Ge.yml
    main/Ag/Ciesielski-Ni.yml
    main/Au/Ciesielski.yml
    main/Au/Ciesielski-Ge.yml
    main/Ge/Ciesielski-20nm
    main/Ge/Ciesielski-20nm
    main/Se/Ciesielski.yml
    main/Te/Ciesielski.yml
  new data (thanks to Johannes Bühler and Marco Fischer, University of Konstanz, Germany, for providing numerical data in YAML format!)
    main/SiC/Fischer-o.yml
    main/SiC/Fischer-e.yml
    main/SiC/Wang-6H-o.yml
    main/SiC/Wang-6H-e.yml
    main/SiC/Wang-4H-o.yml
    main/SiC/Wang-4H-e.yml
  new data (thanks to Andreas Vinnberg for suggestion!)
    main/SF6/Vukovic.yml
  new data (thanks to Juan I. Larruquert for providing numerical data!)
    main/CeF3/Rodriguez-de Marcos.yml
    main/LaF3/Rodriguez-de Marcos.yml
    main/MgF2/Rodriguez-de Marcos.yml
    main/SiO2/Rodriguez-de Marcos.yml
    main/Ta2O5/Rodriguez-de Marcos.yml
  new data (thanks to Valkai Sándor!)
    other/resists/Microchem SU-8 2000.yml
    other/resists/Microchem SU-8 3000.yml
  new data (thanks to Alessio Bucciarelli, University of Trento, Italy!)
    other/silk/Bombyx mori/Bucciarelli-FPP_FA_Ex.yml
    other/silk/Bombyx mori/Bucciarelli-FPP_FA_Unex.yml
    other/silk/Bombyx mori/Bucciarelli-rSF_FA.yml
    other/silk/Bombyx mori/Bucciarelli-rSF_H2O.yml
    other/silk/Bombyx mori/Bucciarelli-SPP_FA_Ex.yml
    other/silk/Bombyx mori/Bucciarelli-SPP_FA_Unex.yml
    other/silk/Bombyx mori/Bucciarelli-SN_FA.yml
  new data
    main/He/Smith.yml
    main/H2/Smith.yml
    main/O2/Smith.yml