@@ -1,0 +1,40 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "S. Yamaguchi, T. Hanyu. Optical properties of potassium, <a href=\"https://doi.org/10.1143/JPSJ.31.1431\"><i>J. Phys. Soc. Jpn.</i> <b>31</b>, 1431-1441 (1971)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.200 0.864160 0.052652
+        0.210 0.845553 0.054402
+        0.220 0.811750 0.054204
+        0.230 0.784136 0.053562
+        0.240 0.740628 0.059409
+        0.260 0.661223 0.056713
+        0.280 0.565928 0.065379
+        0.290 0.506726 0.069071
+        0.300 0.428659 0.075818
+        0.310 0.335469 0.092408
+        0.315 0.280721 0.108649
+        0.320 0.217039 0.138224
+        0.322 0.191296 0.156825
+        0.325 0.159417 0.188186
+        0.330 0.117674 0.250693
+        0.335 0.095749 0.313318
+        0.340 0.081061 0.376259
+        0.350 0.065580 0.465081
+        0.360 0.056393 0.549709
+        0.380 0.050753 0.689620
+        0.400 0.050949 0.804733
+        0.420 0.053595 0.914261
+        0.440 0.076149 1.017742
+        0.460 0.056511 1.105981
+        0.480 0.052215 1.196966
+        0.500 0.050411 1.289396
+        0.525 0.049508 1.393718
+        0.550 0.044670 1.600623
+        0.600 0.040213 1.703413
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
