@@ -1,0 +1,38 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "S. Yamaguchi, T. Hanyu. The optical properties of Rb, <a href=\"https://doi.org/10.1143/JPSJ.35.1371\"><i>J. Phys. Soc. Jpn.</i> <b>35</b>, 1371-1377 (1973)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.200 0.958902 0.086557
+        0.210 0.926187 0.082597
+        0.220 0.901570 0.082634
+        0.240 0.849469 0.081227
+        0.260 0.786160 0.083952
+        0.280 0.716250 0.094939
+        0.300 0.634420 0.107185
+        0.320 0.532066 0.126864
+        0.330 0.470410 0.142429
+        0.335 0.437547 0.153126
+        0.340 0.401123 0.167031
+        0.350 0.328155 0.204172
+        0.355 0.292407 0.229133
+        0.360 0.258847 0.256908
+        0.365 0.226416 0.293707
+        0.370 0.197738 0.336304
+        0.380 0.157813 0.418216
+        0.390 0.135535 0.494338
+        0.400 0.121455 0.568112
+        0.420 0.112145 0.691069
+        0.440 0.114808 0.796982
+        0.460 0.110953 0.901283
+        0.480 0.109886 1.001037
+        0.500 0.110822 1.087328
+        0.525 0.108643 1.196580
+        0.550 0.114082 1.297311
+        0.600 0.118483 1.481229
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
