@@ -10,7 +10,6 @@
     other/anti-reflective coatings/SiN/Vogt-2.09.yml
     other/anti-reflective coatings/SiN/Vogt-2.13.yml
     glass/misc/soda-lime/Vogt-10ppm.yml
-    main/Si/Schinke.yml (added data for n)
   new data (thanks to Arkadiusz Ciesielski, University of Warsaw, Poland, for providing numerical data in YAML format!)
     main/Ag/Ciesielski.yml
     main/Ag/Ciesielski-Ge.yml
@@ -81,6 +80,9 @@
     main/In/Mathewson-140K.yml
     main/Li/Mathewson-298K.yml 
     main/Li/Mathewson-140K.yml
+    main/Na/Inagaki-liquid.yml
+    main/Na/Yamaguchi.yml
+    main/Rb/Yamaguchi.yml
   updated data
     all data co-authored by J. I. Larruquert: add deposition temperature and specs
     main/Al/Larruquert.yml: references
@@ -100,6 +102,7 @@
     other/alloys/V-Ga/Golovashkin-293.yml: comments, specs, rename to Golovashkin-293K.yml
     other/alloys/V-Ga/Golovashkin-78.yml: comments, specs, rename to Golovashkin-78K.yml
     glass/misc/soda-lime/Rubin*.yml: references
+    main/Si/Schinke.yml: add data for n (thanks to Malte Vogt!)
 
 
 ============================== 2018-02-10 ==============================
